--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body {
   padding: 0;
-  background: url("Images/bank.jpg") no-repeat center center fixed;
+  background: url("bank.jpg") no-repeat center center fixed;
   background-size: cover;
   font-family: "Montserrat";
   z-index: 0;
